--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> CSS Clock </title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 <div class="clock">
-  <div class="dot"></div>
-  <div class="hand-hr">
-    <div class="hr"></div>
-  </div>
-  <div class="hand-min">
-    <div class=" min"></div>
-  </div>
-  <div class="hand-sec">
-    <div class="sec"></div>
-  </div>
-</div>
+      <div class="clock-face">
+        <div class="hand hour-hand"></div>
+        <div class="hand min-hand"></div>
+        <div class="hand second-hand"></div>
+      </div>
+    </div>
+  </body>
+</html>
