--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
+    <script src="demo_script_src.js">
+</script>
   </body>
 </html>
