--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
-    <script src="demo_script_src.js">
+    <script src="script.js">
 </script>
   </body>
 </html>
